--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\Code Workspace\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
+  "python.pythonPath": "C:\\Users\\james\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe"
 }
